# elusivemail

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
backend/: .gitignore  package-lock.json  package.json
backend/crates/crypto-core/: Cargo.toml
backend/crates/crypto-core/src/: lib.rs
backend/src/: app.js  config.js  server.js  wkd.js
backend/src/admin/: routes.js
backend/src/auth/: middleware.js  routes.js
backend/src/crypto/: fallback.js  index.js  native.js  pgp.js  prekeys.js
backend/src/db/: index.js
backend/src/mail/: routes.js  transport.js
backend/test/: account-check.js  security-check.js  smtp-check.js  upgrade-check.js
backend/tools/: backup.js  make-admin.js
frontend/: about.html  admin.html  chat-control.html  contact.html  dashboard.html  help.html  index.html  join.html  login.html  privacy.html  recover.html  security.html  settings.html  terms.html  updates.html
frontend/scripts/pages/: admin.js  dashboard.js  join.js  login.js  recover.js  security.js  settings.js  updates.js
frontend/scripts/shared/: api.js  crypto-client.js  crypto-session.js  mail-cache.js  site.js  theme-init.js  ui.js
frontend/styles/: admin.css  app.css  auth.css  base.css  components.css  marketing.css  security.css  settings.css  tokens.css
